# mic-mute-listener

./: .gitignore  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  MicMuteListener.cpp  OSDWindow.cpp  README.md  config.ini  main.cpp  resources.rc
core/: ConfigLoader.cpp  ConfigLoader.h  MicMuteListener.cpp  MicMuteListener.h  OSDWindow.cpp  TrayIcon.cpp  TrayIcon.h
include/: ConfigManager.h  MicMuteListener.h  MicVolumeCallback.h  OSDWindow.h  TrayIcon.h
src/: ConfigLoader.cpp  ConfigManager.cpp  MicMuteListener.cpp  MicVolumeCallback.cpp  OSDWindow.cpp  TrayIcon.cpp  main.cpp
